// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`items.yml - yaml-verify 1`] = `
- 123
- 456
- 789
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- 123
- 456
- 789

`;

exports[`items.yml - yaml-verify 2`] = `
- 123
- 456
- 789
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- 123
- 456
- 789

`;

exports[`middle-comment.yml - yaml-verify 1`] = `
!!set # comment
- 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set # comment
- 123

`;

exports[`middle-comment.yml - yaml-verify 2`] = `
!!set # comment
- 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set # comment
- 123

`;

exports[`middle-comments.yml - yaml-verify 1`] = `
!!set # comment 1
# comment 2
- 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set
# comment 1
# comment 2
- 123

`;

exports[`middle-comments.yml - yaml-verify 2`] = `
!!set # comment 1
# comment 2
- 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set
# comment 1
# comment 2
- 123

`;

exports[`nested.yml - yaml-verify 1`] = `
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1

`;

exports[`nested.yml - yaml-verify 2`] = `
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1

`;

exports[`null-item.yml - yaml-verify 1`] = `
-
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-

`;

exports[`null-item.yml - yaml-verify 2`] = `
-
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-

`;

exports[`props.yml - yaml-verify 1`] = `
--- !!set &anchor
- 123
- 456
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set &anchor
- 123
- 456

`;

exports[`props.yml - yaml-verify 2`] = `
--- !!set &anchor
- 123
- 456
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set &anchor
- 123
- 456

`;

exports[`props-in-map.yml - yaml-verify 1`] = `
a: !!set &anchor
- 123
- 456
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!set &anchor
  - 123
  - 456

`;

exports[`props-in-map.yml - yaml-verify 2`] = `
a: !!set &anchor
- 123
- 456
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!set &anchor
    - 123
    - 456

`;
